// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

//  **** IMPORTANT NOTE ****
//
//  The proto of BT data has to match exactly the g3 proto, including tag
//  number.

// REST API URL from the proto in this file:
// ========================================
//    /internal/place (/landing-page)
//    /internal/bio
//    /internal/import-table
// ========================================

syntax = "proto3";
package datacommons;

option go_package = "github.com/datacommonsorg/mixer/internal/proto";

// Request to get all data in bio page.
message GetBioPageDataRequest {
  // The dcid of the entity
  string dcid = 1;
}

// Request to update cache for server based on SQL storage.
message UpdateCacheRequest {
}

// Response of UpdateCache request.
message UpdateCacheResponse {
}

// Request to get data in the import table
message GetImportTableDataRequest {
}

// Response of GetImportTableDataRequest
message GetImportTableDataResponse{
  message ImportData {
    message ImportMetadata{
      int32 num_obs = 5;
      int32 num_vars = 6;
    }
  
    string imported_at = 2;
    string status = 3;
    ImportMetadata metadata = 4;
  }
  repeated ImportData data = 1;
}
